tests/NormalTests/paczka1/small_fuzzy/82592063.err
Error in line 1: bC898ss A481 10,5
Error in line 4: S260 S288 41,7
Error in line 2: rleOydeX A481 41,0
